@@ -4,7 +4,7 @@
 '\" See the file "license.terms" for information on usage and redistribution
 '\" of this file, and for a DISCLAIMER OF ALL WARRANTIES.
 '\" 
-'\" RCS: @(#) $Id: grid.n,v 1.3 2001/02/12 18:06:47 drh Exp $
+'\" RCS: @(#) $Id: grid.n,v 1.4 2001/08/18 20:03:16 pspjuth Exp $
 '\" 
 .so man.macros
 .TH grid n 4.1 Tk "Tk Built-In Commands"
@@ -25,9 +25,11 @@ The \fBgrid\fR command can have any of several forms, depending
 on the \fIoption\fR argument:
 .TP
 \fBgrid \fIslave \fR?\fIslave ...\fR? ?\fIoptions\fR?
-If the first argument to \fBgrid\fR is a window name (any value
-starting with ``.''), then the command is processed in the same
-way as \fBgrid configure\fR.
+If the first argument to \fBgrid\fR is suitable as the first slave
+argument to \fBgrid configure\fR, either a window name (any value
+starting with \fB.\fP) or one of the characters \fBx\fP or \fB^\fP 
+(see the ``RELATIVE PLACEMENT'' section below), then the command is
+processed in the same way as \fBgrid configure\fR.
 .TP
 \fBgrid bbox \fImaster\fR ?\fIcolumn row\fR? ?\fIcolumn2 row2\fR?
 With no arguments, 
@@ -249,14 +251,15 @@ default values are chosen for
 at the time the \fIslave\fP is managed. The values are chosen
 based upon the current layout of the grid, the position of the \fIslave\fP
 relative to other \fIslave\fPs in the same grid command, and the presence
-of the characters \fB\-\fP, \fB^\fP, and \fB^\fP in \fBgrid\fP
+of the characters \fB\-\fP, \fBx\fP, and \fB^\fP in \fBgrid\fP
 command where \fIslave\fP names are normally expected.
 .RS
 .TP
 \fB\-\fP
 This increases the columnspan of the \fIslave\fP to the left.  Several
 \fB\-\fP's in a row will successively increase the columnspan. A \fB\-\fP
-may not follow a \fB^\fP or a \fBx\fP.
+may not follow a \fB^\fP or a \fBx\fP, nor may it be the first \fIslave\fP
+argument to \fBgrid configure\fR.
 .TP
 \fBx\fP
 This leaves an empty column between the \fIslave\fP on the left and
