@@ -1,3 +1,9 @@
+2001-08-18  Peter Spjuth <peter.spjuth@space.se>
+	* doc/grid.n:
+	* tests/grid.test:
+	* generic/tkGrid.c: Grid configure rejected initial "x" and "^"
+	when the doc said it should accept them. [Bug #418664]
+	
 2001-08-17  Donal K. Fellows  <fellowsd@cs.man.ac.uk>
 
 	* generic/tkObj.c (TkGetWindowFromObj): Was failing to reuse
